@@ -15,11 +15,15 @@ import sqlartan.view.tabs.struct.DatabaseStructure;
 import sqlartan.view.util.Popup;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import sqlartan.core.stream.IterableStream;
+import sqlartan.view.AllRequestController;
+import sqlartan.view.tabs.struct.DatabaseStructure;
+import java.io.IOException;
 
 /**
  * Created by julien on 30.04.16.
  */
-public class DatabaseTabsController extends TabsController {
+public class DatabaseTabsController{
 
 	@FXML
 	private TableColumn<DatabaseStructure, String> colName;
@@ -38,6 +42,11 @@ public class DatabaseTabsController extends TabsController {
 	private Tab structureTab;
 
 	@FXML
+	private Tab sqlTab;
+
+	private AllRequestController allRequestControler;
+
+	@FXML
 	private TableView<DatabaseStructure> structureTable;
 
 	private Database database;
@@ -47,11 +56,24 @@ public class DatabaseTabsController extends TabsController {
 	private ObservableList<DatabaseStructure> dbStructs = FXCollections.observableArrayList();
 
 	@FXML
-	private Pane sqlTab;
+	private Pane sqlPane;
 
 	@FXML
 	private void initialize() {
-		addPane(new FXMLLoader(Sqlartan.class.getResource("view/AllRequest.fxml")), sqlTab);
+		FXMLLoader loader = new FXMLLoader(Sqlartan.class.getResource("view/AllRequest.fxml"));
+
+		try {
+			Pane pane = loader.load();
+			sqlPane.getChildren().add(pane);
+
+			allRequestControler = loader.getController();
+			pane.prefHeightProperty().bind(sqlPane.heightProperty());
+			pane.prefWidthProperty().bind(sqlPane.widthProperty());
+
+		} catch (IOException e) {
+
+		}
+
 		tabPane.getSelectionModel().selectedItemProperty().addListener((observable, oldTab, newTab) -> {
 			if (newTab == structureTab) {
 				displayStructure();
@@ -135,7 +157,7 @@ public class DatabaseTabsController extends TabsController {
 										controller.dropView(database.view(dbStruct.nameProperty().get()).get());
 										break;
 									case "Table" :
-										controller.dropTable(database.table(dbStruct.nameProperty().get()).get());
+										controller.dropStructure(database.table(dbStruct.nameProperty().get()).get());
 										break;
 								}
 							} );
@@ -156,11 +178,10 @@ public class DatabaseTabsController extends TabsController {
 	 */
 	private void displayStructure() {
 		dbStructs.clear();
-		dbStructs.addAll(Stream.concat(database.tables(), database.views())
-		                       .sorted((a, b) -> a.name().compareTo(b.name()))
-		                       .map(DatabaseStructure::new)
-		                       .collect(Collectors.toList()));
-
+		dbStructs.addAll(database.structures()
+		                         .sorted((a, b) -> a.name().compareTo(b.name()))
+		                         .map(DatabaseStructure::new)
+		                         .toList());
 
 		structureTable.setItems(dbStructs);
 	}
@@ -181,5 +202,14 @@ public class DatabaseTabsController extends TabsController {
 	 */
 	public void setController(SqlartanController controller) {
 		this.controller = controller;
+	}
+
+	public void selectSqlTab(){
+		tabPane.getSelectionModel().selectFirst();
+		tabPane.getSelectionModel().selectNext();
+	}
+
+	public void setSqlRequest(String request){
+		allRequestControler.setRequest(request);
 	}
 }
